experiment to support deserializing cycles with proxies